<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">RALMDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_action_label_view_page_banner">RecyclerViewWithViewPage</string>
    <string name="label_action_label_header_view">HeaderRecyclerView</string>
    <string name="label_action_label_header_grid_view">HeaderGridRecyclerView</string>
    <string name="label_action_label_recycler_view">RefreshRecyclerView</string>
    <string name="label_action_label_grid_view">GridView</string>
    <string name="label_action_label_refresh_grid_view">RefreshGridViewActivity</string>
    <string name="label_action_label_annotation_permission">AnnotationPermission</string>
    <string name="label_action_label_permission">Permission</string>
    <string name="label_action_label_web_view">WebView</string>
    <string name="label_action_label_sticky_header_view">StickyHeader</string>
    <string name="label_action_label_expandable_view">Expandable</string>
    <string name="label_action_label_sticky_expandable_view">StickyAndExpandableHeader </string>
    <string name="label_action_label_staggered_grid_view">StaggeredGrid</string>
    <string name="label_action_label_index_view">Index</string>
    <string name="label_action_label_data_binding">DataBinding</string>
    <string name="label_action_label_web_view_screen_shot">screenshot</string>
    <string name="label_action_label_add_header_view">add header view</string>
    <string name="label_action_label_del_header_view">del header view</string>
    <string name="label_action_label_add_footer_view">add footer view</string>
    <string name="label_action_label_del_footer_view">del footer view</string>

    <string name="uses_permission_name">&lt;uses-permission android:name=\&quot;%s\&quot;/&gt;</string>

    <!-- guide -->
    <string name="guide_title_1">First Title</string>
    <string name="guide_description_1" tools:ignore="Typos">description description description</string>
    <string name="guide_title_2">Second Title</string>
    <string name="guide_description_2" tools:ignore="Typos">description description description</string>
    <string name="guide_title_3">Third Title</string>
    <string name="guide_description_3" tools:ignore="Typos">description description description</string>


    <string name="very_long_text">\r\n
        00--very long text\r\n
        01--very long text\r\n
        02--very long text\r\n
        03--very long text\r\n
        04--very long text\r\n
        05--very long text\r\n
        06--very long text\r\n
        07--very long text\r\n
        08--very long text\r\n
        09--very long text\r\n
        10--very long text\r\n
        11--very long text\r\n
        12--very long text\r\n
        13--very long text\r\n
        14--very long text\r\n
        15--very long text\r\n
        16--very long text\r\n
        17--very long text\r\n
        18--very long text\r\n
        19--very long text\r\n
        20--very long text\r\n
        21--very long text\r\n
        22--very long text\r\n
        23--very long text\r\n
        24--very long text\r\n
        25--very long text\r\n
        26--very long text\r\n
        27--very long text\r\n
        28--very long text\r\n
        29--very long text\r\n
        30--very long text\r\n
        31--very long text\r\n
        32--very long text\r\n
        33--very long text\r\n
        34--very long text\r\n
        35--very long text\r\n
        36--very long text\r\n
        37--very long text\r\n
        38--very long text\r\n
        39--very long text\r\n
    </string>
</resources>
