<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_refresh_recycler_view"
        android:title="@string/label_action_label_recycler_view"
        app:showAsAction="never" />
    <item android:id="@+id/action_grid_view"
        android:title="@string/label_action_label_grid_view"
        app:showAsAction="never" />
    <item android:id="@+id/action_permission"
        android:title="@string/label_action_label_permission"
        app:showAsAction="never" />
    <item android:id="@+id/action_web_view"
        android:title="@string/label_action_label_web_view"
        app:showAsAction="never" />
</menu>
