<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_add_header"
        android:title="@string/label_action_label_add_header_view"
        app:showAsAction="never" />
    <item android:id="@+id/action_del_header"
        android:title="@string/label_action_label_del_header_view"
        app:showAsAction="never" />
    <item android:id="@+id/action_add_footer"
        android:title="@string/label_action_label_add_footer_view"
        app:showAsAction="never" />
    <item android:id="@+id/action_del_footer"
        android:title="@string/label_action_label_del_footer_view"
        app:showAsAction="never" />
</menu>
